# cc-authorizer-rust

./: Cargo.toml  README.md  account_not_initialized.txt  expected_output.txt
src/: account.rs  io.rs  main.rs  models.rs  services.rs
src/account/: authorizer.rs  errors.rs  models.rs  validations.rs
src/io/: file.rs  models.rs
src/models/: errors.rs  operation.rs
src/services/: file.rs  operation.rs
