[package]
name = "cc-authorizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
pretty_assertions = "1.3.0"

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
chrono = { version = "0.4", features = ["serde"] }
